<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.0.1.RELEASE</version>
	</parent>
	
	<groupId>org.ihtsdo.snomed.rvf</groupId>
	<artifactId>release-validation-framework</artifactId>
	<version>3.3.2</version>
	<packaging>pom</packaging>
	<name>SNOMED Release Validation Framework</name>
	
	<properties>
		<java.version>11</java.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<packageName>${project.artifactId}</packageName>
		<execFinalName>${project.build.finalName}.jar</execFinalName>
		<slf4j.version>1.7.30</slf4j.version>
		<hsql.version>5.3.0</hsql.version>
		<skip.integration.tests>true</skip.integration.tests>
		<mysql.connector.java.version>5.1.20</mysql.connector.java.version>
		<dbcp.version>1.4</dbcp.version>
		<otf.common.version>3.2.0</otf.common.version>
		<snomed.utilities.version>1.4.1</snomed.utilities.version>
		<spring-cloud-version>1.2.2.RELEASE</spring-cloud-version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>${java.version}</maven.compiler.source>
		<maven.compiler.target>${java.version}</maven.compiler.target>
		<hibernate.version>5.2.17.Final</hibernate.version>
		<springfox-swagger.version>2.7.0</springfox-swagger.version>
		<docker.image.prefix>snomedinternational</docker.image.prefix>
	</properties>

	<modules>
		<module>model</module>
		<module>data-service</module>
		<module>validation-service</module>
		<module>api</module>
		<module>execution-service</module>
		<module>importer</module>
	</modules>


	<scm>
		<connection>scm:git:git@github.com:IHTSDO/release-validation-framework.git</connection>
		<developerConnection>scm:git:git@github.com:IHTSDO/release-validation-framework.git</developerConnection>
		<url>http://github.com/IHTSDO/release-validation-framework</url>
		<tag>HEAD</tag>
	</scm>
	<dependencies>
		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<version>1.3.176</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>${slf4j.version}</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
			<version>${slf4j.version}</version>
		</dependency>
		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
		</dependency>
		<dependency>
			<groupId>com.mangofactory</groupId>
			<artifactId>swagger-springmvc</artifactId>
			<version>1.0.2</version>
			</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter</artifactId>
			<exclusions>
				<exclusion>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-starter-logging</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
			<exclusions>
				<exclusion>
					<groupId>com.vaadin.external.google</groupId>
					<artifactId>android-json</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
	</dependencies>
			
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>commons-lang</groupId>
				<artifactId>commons-lang</artifactId>
				<version>2.6</version>
			</dependency>
			<dependency>
				<groupId>commons-io</groupId>
				<artifactId>commons-io</artifactId>
				<version>2.7</version>
			</dependency>
			<dependency>
				<groupId>com.google.guava</groupId>
				<artifactId>guava</artifactId>
				<version>16.0.1</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.22.1</version>
				<configuration>
					<excludes>
						<exclude>**/*IT.java</exclude>
						<exclude>**/*IntegrationTest.java</exclude>
						<exclude>**/*IntegrationSpec.java</exclude>
					</excludes>
				</configuration>
			</plugin>
			
				<!-- To run integration tests use: mvn clean install -Dskip.integration.tests=false -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<executions>
					<execution>
						<id>integration-test</id>
						<phase>test</phase>
						<goals>
						<goal>integration-test</goal>
						<goal>verify</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
				<includes>
					<include>**/*IT.java</include>
					<include>**/*IntegrationTest.java</include>
					<include>**/*IntegrationSpec.java</include>
				</includes>
				<skipTests>${skip.integration.tests}</skipTests>
			 </configuration>
			</plugin>
			<!-- Docker Image Build -->
			<plugin>
				<groupId>com.spotify</groupId>
				<artifactId>dockerfile-maven-plugin</artifactId>
				<version>1.4.13</version>
				<configuration>
					<repository>${docker.image.prefix}/${project.artifactId}</repository>
					<buildArgs>
						<JAR_FILE>target/${project.build.finalName}.jar</JAR_FILE>
					</buildArgs>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<repositories>
		<repository>
			<id>ihtsdo-releases</id>
			<name>IHTSDO Public Nexus Releases</name>
			<url>https://nexus3.ihtsdotools.org/repository/maven-releases/</url>
		</repository>
		<repository>
			<id>ihtsdo-old-public-nexus</id>
			<name>OLD IHTSDO Public Nexus Releases</name>
			<url>https://maven.ihtsdotools.org/content/repositories/releases/</url>
		</repository>
		<repository>
			<id>ihtsdo-snapshots</id>
			<name>IHTSDO Public Nexus Snapshots</name>
			<url>https://nexus3.ihtsdotools.org/repository/maven-snapshots/</url>
		</repository>
	</repositories>
	

	<distributionManagement>
		<repository>
			<id>ihtsdo-public-nexus</id>
			<name>IHTSDO Public Nexus Releases</name>
			<url>https://nexus3.ihtsdotools.org/repository/maven-releases/</url>
		</repository>
		<snapshotRepository>
			<id>ihtsdo-public-nexus</id>
			<name>IHTSDO Public Nexus Snapshots</name>
			<url>https://nexus3.ihtsdotools.org/repository/maven-snapshots/</url>
		</snapshotRepository>
	</distributionManagement>

</project>
